test/files/pos/t8449/Client.scala
object Client {
  def foo: Any = new Test().foo
}
