test/files/neg/macro-noexpand/Macros_Test_2.scala
object Macros {
  def foo(x: Any): Any = macro Impls.foo
}

object Test extends App {
  import Macros._
  foo(x)
}
